# rinha24

./: .gitignore  Dockerfile  LICENSE  README.md  compose.yml  init.sql  nginx.conf  pyproject.toml
benchmarks/: Dockerfile  gatling.conf
benchmarks/user-files/simulations/rinhabackend/: RinhaBackendCrebitosSimulation.scala
scripts/: calculate-payment.py  start-benchmark.sh
src/rinha24/: app.py  endpoints.py  models.py
tests/: model_test.py  utils.py
tests/integration/: conftest.py  statement_test.py  transaction_test.py
