[project]
name = "rinha24"
version = "0.1.0"
requires-python = ">=3.14"
dependencies = [
    "asyncpg>=0.31.0",
    "pydantic>=2.12.5",
    "starlette>=0.51.0",
    "uvicorn>=0.40.0",
]

[build-system]
requires = ["uv_build>=0.9.26,<0.10.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "hypothesis>=6.150.2",
    "pytest>=9.0.2",
    "testcontainers[postgres]>=4.14.0",
]
[tool.pytest.ini_options]
filterwarnings = [
    "ignore:^The @wait_container_is_ready decorator:DeprecationWarning"
]
